k8s/argo/argo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    # cluster ingress config
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"

    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Argo'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argo-server
              servicePort: 2746
      host: argo.easytensor.com
  tls:
  - hosts:
    - argo.easytensor.com
    secretName: argo-secret
